# nditer

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
benches/: iter.rs  pairwise_sum.rs  sum.rs
src/: dim_traits.rs  errors.rs  impl_proptest.rs  iter.rs  lib.rs  optimize.rs  pairwise_sum.rs
src/adapters/: broadcast.rs  cloned.rs  fold_axes.rs  forbid_invert_axes.rs  force_axes_ordered.rs  indexed.rs  inspect.rs  map.rs  mod.rs  repeat.rs  repeat_with.rs  select_indices_axis.rs  zip.rs
src/axes/: axes_for.rs  mod.rs
src/impl_ndarray/: mod.rs
src/impl_proptest/: layout.rs  mod.rs  state.rs
tests/: adapters.rs  consumers.rs  impl_ndarray.rs  iter.rs
