[package]
name = "nditer"
version = "0.1.0"
authors = ["Jim Turner <rust@turner.link>"]
edition = "2018"

[dependencies]
itertools = "0.7"
ndarray = "0.12"

[dev-dependencies]
criterion = "0.2"
quickcheck = "0.8"
quickcheck_macros = "0.8"
rand = "0.5"

[[bench]]
name = "iter"
harness = false

[patch.crates-io]
ndarray = { git = "https://github.com/jturner314/ndarray.git", branch = "master" }
