[package]
name = "nditer"
version = "0.1.0"
authors = ["Jim Turner <rust@turner.link>"]
edition = "2018"

[dependencies]
itertools = "0.8"
ndarray = "0.13"
num-traits = "0.2"

[dev-dependencies]
criterion = "0.2"
ndarray-rand = "0.11"
quickcheck = "0.8"
quickcheck_macros = "0.8"
rand = "0.7"

[[bench]]
name = "iter"
harness = false

[[bench]]
name = "pairwise_sum"
harness = false

[patch.crates-io]
ndarray = { git = "https://github.com/jturner314/ndarray.git", branch = "master" }
